--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ e<!DOCTYPE HTML>
     <body id="test" onload="compareStr()">
         <center><div id="dag"></div></center><br>
            <h1><center>Mercy</center></h1>
-         <div id="pic"><img src="mercy.jpg" alt="mercy" ></div>
+         <div id="pic"><img src="mercy.JPG" alt="mercy" ></div>
          
          <center><h1>Her Description</h1></center>
          <dl>
