--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ e<!DOCTYPE HTML>
                 
                 
                 background-image: url(Woodfloor.jpg);
-                background-size: contain;
+                background-size: cover;
 
             }
 
