--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
             <center><h3>Her hobbies</h3></center>
             <ol><li color="skyblue">She likes music, social platforms and love story</li></ol>
-         <form action="mailto:nuuhujumax50@gmail.com?subject=subject&cc=nuuhujumax50@gmail.com" method="post" enctype="text/plain" >
+         <form action="http://formspree.io/nuuhujumax50@gmail.com" method="post" enctype="text/plain" >
                         <fieldset id="din">
                 <legend style="margin: 0 auto;">My Questions to You</legend>
             <label><b>Name:</b><input type="text" name="name" placeholder="My name in your phone?"></label><br/><br/>
