--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
          <form method="POST" action="http://formspree.io/f/xvoljwbv" enctype="text/plain" >
                         <fieldset id="din">
                 <legend style="margin: 0 auto;">My Questions to You</legend>
-            <label><b>Name:</b><input type="text" name="name" placeholder="My name in your phone?" required></label><br/><br/>
-        <label><b>Relationship:</b><input type="text" name="relation" placeholder="Relationship btn me and you?" required></label><br/><br/> 
-        <label><b>Like:</b><input type="text" name="like" placeholder="What you like about me?" required></label><br/><br/>
-        <label><b>Hate:</b><input type="text" name="hate" placeholder="What you hate about me?" required></label><br/><br/>
-        <label><b>Die:</b><input type="text" name="die" placeholder="What would you do if i die?" required></label><br/><br/>
-        <label><b>Message:<textarea name="msg" placeholder="A message from your heart?" required></textarea></b></label><br/><br/>
-        <label><b>Nickname:</b><input type="text" name="nick" placeholder="Nickname for me?" required></label><br/><br/>
+            <label for="name" ><b>Name:</b><input type="text" name="name" placeholder="My name in your phone?" required></label><br/><br/>
+        <label for="relation" ><b>Relationship:</b><input type="text" name="relation" placeholder="Relationship btn me and you?" required></label><br/><br/> 
+        <label for="like" ><b>Like:</b><input type="text" name="like" placeholder="What you like about me?" required></label><br/><br/>
+        <label for="hate" ><b>Hate:</b><input type="text" name="hate" placeholder="What you hate about me?" required></label><br/><br/>
+        <label for="die"><b>Die:</b><input type="text" name="die" placeholder="What would you do if i die?" required></label><br/><br/>
+        <label for="msg" ><b>Message:<textarea name="msg" placeholder="A message from your heart?" required></textarea></b></label><br/><br/>
+        <label for="nick" ><b>Nickname:</b><input type="text" name="nick" placeholder="Nickname for me?" required></label><br/><br/>
     
   <center><input type="reset" name="reset" id="dan" > <input type="submit" name="submit" id="dan"></center>
     </fieldset><br/><br/>
