--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 
             <center><h3>Her hobbies</h3></center>
             <ol><li color="skyblue">She likes music, social platforms and love story</li></ol>
-         <form method="POST" action="http://formspree.io/f/xvoljwbv" enctype="text/plain" >
+         <form action="http://formspree.io/f/xvoljwbv" method=post" enctype="multipart/form-data" >
                         <fieldset id="din">
                 <legend style="margin: 0 auto;">My Questions to You</legend>
-            <label for="name" ><b>Name:</b><input type="text" name="name" placeholder="My name in your phone?" required></label><br/><br/>
+            <label for="names" ><b>Name:</b><input type="text" name="names" placeholder="My name in your phone?" required></label><br/><br/>
         <label for="relation" ><b>Relationship:</b><input type="text" name="relation" placeholder="Relationship btn me and you?" required></label><br/><br/> 
         <label for="like" ><b>Like:</b><input type="text" name="like" placeholder="What you like about me?" required></label><br/><br/>
         <label for="hate" ><b>Hate:</b><input type="text" name="hate" placeholder="What you hate about me?" required></label><br/><br/>
