--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         var a=d.getSeconds();
        
         if(c<12){
-            document.getElementById("dag").innerHTML=Date();
+            document.getElementById("spin").innerHTML=Date();
             document.getElementById("spin").innerHTML="good morning";
             
             document.getElementById("dag").style.backgroundImage="url('morning.jpg')";
