--- a/index.html
+++ b/index.html
@@ -67,13 +67,16 @@
                 width: 45vw;
                 background-size: contain;
                 padding-top: 2%;
+                Padding-bottom:2%;
                 text-align: center;
                 font-size: 32pt;
                 font-weight: 800;
                 color: aqua;
                 margin: 0 auto;
-            
+    #spin{
+         Line-height:1px;          
             }
+
         </style>
     </head>
     <body id="test" onload="compareStr()">
