--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 color: aqua;
                 margin: 0 auto;
     #spin{
-         Line-height:0.5px;          
+         line-height:0.5em;          
             }
 
         </style>
