--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 padding-top: 2%;
                 Padding-bottom:2%;
                 text-align: center;
-                font-size: 24pt;
+                font-size: 16pt;
                 font-weight: 800;
                 color: aqua;
                 margin: 0 auto;
@@ -164,7 +164,7 @@
         var a=d.getSeconds();
        
         if(c<12){
-            document.getElementById("spin").innerHTML=Date();
+            document.getElementById("spin").innerHTML=a;
             document.getElementById("spin").innerHTML="good morning";
             
             document.getElementById("dag").style.backgroundImage="url('morning.jpg')";
