--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         var a=d.getSeconds();
        
         if(c<12){
-            document.getElementById("spen").innerHTML=c:b;
+            document.getElementById("spen").innerHTML=c+":"+b;
             document.getElementById("spin").innerHTML="good morning";
             
             document.getElementById("dag").style.backgroundImage="url('morning.jpg')";
