--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
          <meta name="referrer" content="origin">
         <title>
-            Mercy
+            Jovia
         </title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <style>
@@ -79,8 +79,8 @@
     </head>
     <body id="test" onload="compareStr()">
         <center><div id="dag"><p id="spen"></p><p id="spin"></p></div></center><br>
-           <h1><center>Mercy</center></h1>
-         <div id="pic"><img src="mercy.JPG" alt="mercy" ></div>
+           <h1><center>My Jovia</center></h1>
+         <div id="pic"><img src="Jovia.jpg" alt="jovia" ></div>
          
          <center><h1>Her Description</h1></center>
          <dl>
