--- a/index.html
+++ b/index.html
@@ -170,21 +170,21 @@
         
         }
         if(c>=12&&c<16){
-            var boy=document.getElementById("dag").innerHTML=Date();
+            var boy=document.getElementById("dag").innerHTML=c+":"+b;
             document.getElementById("spin").innerHTML="Good afternoon ";
            document.write(boy);
             document.getElementById("dag").style.backgroundImage="url('afternoon.jpg')";
   
         }
         if(c>=16&&c<22){
-            var boy=document.getElementById("dag").innerHTML=Date();
+            var boy=document.getElementById("dag").innerHTML=c+":"+b;
             document.getElementById("spin").innerHTML="good evening";
             document.write(boy); 
             document.getElementById("dag").style.backgroundImage="url('evening.jpg')";
  
         }
         if(c>=22){
-            var boy=document.getElementById("dag").innerHTML=Date();
+            var boy=document.getElementById("dag").innerHTML=c+":"+b;
             document.getElementById("spin").innerHTML="have a good night";
              document.write(boy);
             document.getElementById("dag").style.backgroundImage="url('night.jpg')";
