--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <body id="test" onload="compareStr()">
         <center><div id="dag"><p id="spen"></p><p id="spin"></p></div></center><br>
            <h1><center>My Jovia</center></h1>
-         <div id="pic"><img src="Jovia.jpg" alt="jovia" ></div>
+         <div id="pic"><img src="jovia.jpg" alt="jovia" ></div>
          
          <center><h1>Her Description</h1></center>
          <dl>
